--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,15 @@ jobs:
     steps:
     - uses: actions/checkout@master
 
+    - name: Executing remote  command
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.HOST }}
+        username: ${{ secrets.USERNAME }}
+        password: ${{ secrets.PASSWORD }}
+        port: ${{ secrets.PORT }}
+        script: cd /home/fayis/app && forever stop app.js
+
     - name: Copy file via scp
       uses: appleboy/scp-action@master
       with:
@@ -27,4 +36,4 @@ jobs:
         username: ${{ secrets.USERNAME }}
         password: ${{ secrets.PASSWORD }}
         port: ${{ secrets.PORT }}
-        script: cat /home/fayis/app/app.js
+        script: cd /home/fayis/app && forever start app.js
