--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,9 @@ jobs:
         username: ${{ secrets.USERNAME }}
         password: ${{ secrets.PASSWORD }}
         port: ${{ secrets.PORT }}
-        script: cd /home/fayis/app && forever stop app.js
+        script: |
+          cd /home/fayis/app
+          forever stop app.js
 
     - name: Copy file via scp
       uses: appleboy/scp-action@master
@@ -36,4 +38,7 @@ jobs:
         username: ${{ secrets.USERNAME }}
         password: ${{ secrets.PASSWORD }}
         port: ${{ secrets.PORT }}
-        script: cd /home/fayis/app && npm install && forever start app.js
+        script: |
+          cd /home/fayis/app
+          npm install
+          forever stop app.js
