--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,4 +41,4 @@ jobs:
         script: |
           cd /home/fayis/app
           npm install
-          forever app app.js
+          forever start app.js
