--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "googleapis": "39",
     "morgan": "^1.10.0",
     "youtube-mp3-downloader": "^0.6.6"
   }
